[gd_scene load_steps=9 format=3 uid="uid://dhs1k6pr6qqjw"]

[ext_resource type="Script" uid="uid://b1wod3ptmhmhq" path="res://Hud/GUI/ui.gd" id="1_26lky"]
[ext_resource type="Texture2D" uid="uid://btxo1oth0mume" path="res://Hud/GUI/assets/dash_bar/dash_timer1.png" id="2_sqogc"]
[ext_resource type="FontFile" uid="uid://cyhlg16qsrerc" path="res://Hud/fonts/m3x6.ttf" id="2_w0is7"]
[ext_resource type="Texture2D" uid="uid://dvsbpub2squye" path="res://Hud/GUI/assets/dash_bar/dash_timer2.png" id="3_w0is7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3jvc5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26lky"]
bg_color = Color(0.875508, 0, 0.229903, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0is7"]
bg_color = Color(0.000762933, 0.0487613, 0.118686, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uruf4"]
bg_color = Color(0.969137, 0.969137, 0.969137, 1)

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_26lky")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = 52.0
offset_top = 32.0
offset_right = 408.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(1, 0.996078, 0.678431, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_w0is7")
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxEmpty_3jvc5")
theme_override_styles/fill = SubResource("StyleBoxFlat_26lky")
max_value = 1e+12
value = 60.0
show_percentage = false

[node name="HealthText" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 10.0
offset_top = -5.0
offset_right = 92.0
offset_bottom = 18.75
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.576412, 0, 0.0879661, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_w0is7")
theme_override_font_sizes/font_size = 35
text = "10/100"

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_w0is7")
theme_override_styles/fill = SubResource("StyleBoxFlat_uruf4")
max_value = 1e+16
value = 70.0
show_percentage = false

[node name="Timer" type="Timer" parent="HealthBar"]
one_shot = true

[node name="DashCooldown" type="TextureProgressBar" parent="."]
offset_left = 50.0
offset_top = 60.0
offset_right = 66.0
offset_bottom = 76.0
scale = Vector2(3, 3)
fill_mode = 3
texture_under = ExtResource("2_sqogc")
texture_progress = ExtResource("3_w0is7")
tint_under = Color(1, 1, 1, 0.470588)
tint_progress = Color(1, 1, 1, 0.470588)

[connection signal="timeout" from="HealthBar/Timer" to="." method="_on_timer_timeout"]
